--- a/week7/team/css/styles.css
+++ b/week7/team/css/styles.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 img {
@@ -44,7 +43,7 @@ h2.hikeStyles__header {
 }
 
 .hikeStyles__image img {
-  width: 100%;
+  width: 100%
 }
 
 .hikeStyles__image {
@@ -54,6 +53,7 @@ h2.hikeStyles__header {
 
 .hikeStyles__content {
   padding: 1rem;
+
 }
 
 .container {
@@ -89,10 +89,8 @@ textarea {
   margin: 0 1rem 1rem 1rem;
 }
 
-#commentinput textarea {
-  margin: 0;
-  margin-bottom: 1rem;
-}
+#commentinput textarea {margin: 0;
+  margin-bottom: 1rem;}
 
 #commentbutton {
   max-width: 150px;
